--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
