--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:icon="@drawable/twitter_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"/>
+        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".ComposeActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".TimelineActivity" />
         <activity
             android:name=".SplashScreen"
